# Distributed-cross-MoE-interop

./: .gitignore  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cei/: __init__.py  adapters.py  cli.py  distributed.py  fleet_build.py  host.py  learner.py  metrics.py  node.py  registry.py  router.py  security.py  simulate.py  tlsutil.py  types.py  wire.py
cei/client/: __init__.py
cei/pb/: cei_internal_pb2.py  cei_internal_pb2_grpc.py  cei_pb2.py  cei_pb2_grpc.py
cei/server/: adapter_hub_servicer.py  app.py  learner_servicer.py  node_servicer.py  registry_servicer.py  router_servicer.py
deploy/: env.example
docs/: README.md  architecture.md  deploy-compose.md  evaluation.md  getting-started.md  how-it-works.md  learning.md  protocol.md  security-redteam.md  security.md
schemas/: activation_batch.schema.json  budget.schema.json  cei.proto  cei_internal.proto  combination_plan.schema.json  expert_descriptor.schema.json  report_outcome.schema.json
scripts/: gen_dev_certs.sh  gen_proto.sh
tests/: conftest.py  test_architecture.py  test_auth.py  test_cei.py  test_concurrency.py  test_e2e_distributed.py  test_e2e_secure.py  test_fixes.py  test_grpc.py  test_leases_ownership.py  test_secure_surface.py  test_security.py  test_tls.py  test_validation.py
