[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cei"
version = "0.1.0"
description = "Cross-Expert Interoperation reference simulator (Hierarchical MoE)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "grpcio>=1.60",
  "protobuf>=4.25",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "grpcio-tools>=1.60"]

[project.scripts]
cei-simulate = "cei.cli:main"
cei-serve = "cei.server.app:main"
cei-simulate-distributed = "cei.distributed:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cei*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
