[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cei"
version = "0.2.0"
description = "Cross-Expert Interoperation reference simulator (Hierarchical MoE)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "grpcio>=1.60",
  "protobuf>=4.25",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "grpcio-tools>=1.60", "ruff>=0.4"]

[project.scripts]
cei-simulate = "cei.cli:main"
cei-serve = "cei.server.app:main"
cei-simulate-distributed = "cei.distributed:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cei*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["cei/pb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S110", "S112"]
ignore = [
  "E501",  # long lines in docs-heavy modules
  "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B017"]
